--- a/no_show_appointment_Guilherme_Landim.ipynb
+++ b/no_show_appointment_Guilherme_Landim.ipynb
@@ -443,6 +443,7 @@
     }
    ],
    "source": [
+    "#getting the unique values for handcap\n",
     "df['Handcap'].unique()"
    ]
   },
@@ -921,7 +922,7 @@
     }
    ],
    "source": [
-    "#plotting histograms\n",
+    "#plotting histograms of the columns\n",
     "df.hist(figsize=[15,15]);"
    ]
   },
@@ -984,7 +985,7 @@
     }
    ],
    "source": [
-    "#Ploting percentage\n",
+    "#Ploting percentage of age/ show-noshow\n",
     "no_show_patients = df[no_show].Age.value_counts()\n",
     "total = df.Age.value_counts()\n",
     "no_show_proportion = (no_show_patients/total)*100\n",
@@ -1233,7 +1234,7 @@
     }
    ],
    "source": [
-    "#Plotting pie chart\n",
+    "#Plotting pie chart by the aliases above\n",
     "df_sms.value_counts().plot(kind=\"pie\", figsize = [8, 8],  autopct='%1.1f%%', startangle=270, fontsize=17);\n",
     "plt.title(\"Correlation between patients showing up and SMSs\");\n",
     "plt.ylabel(\"\");\n",
