--- a/no_show_appointment_Guilherme_Landim.ipynb
+++ b/no_show_appointment_Guilherme_Landim.ipynb
@@ -6,6 +6,10 @@
    "source": [
     "\n",
     "# Project: Investigate a Dataset (No-show appointments)\n",
+    "By Guilherme Landim Frota Leitão\n",
+    "\n",
+    "Date May, 2018\n",
+    "\n",
     "\n",
     "![RedCross](https://cdn.icon-icons.com/icons2/807/PNG/512/hospital-1_icon-icons.com_66068.png)\n",
     "[(Font: icon-icons)](https://icon-icons.com/pt/icone/hospital-1-medicina-farmacia-cruz/66068)\n",
